dnl Copyright 2015 Saleem Abdulrasool <compnerd@compnerd.org>
dnl vim: set et fdm=marker fmr={{{,}}} sts=2 sw=2 :

dnl {{{ program, version
AC_PREREQ([2.59])
AC_INIT([multiload], [0.0.1], [compnerd@compnerd.org])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.13 foreign subdir-objects dist-xz])
dnl }}}

dnl {{{ basic toolchain checks
AC_CANONICAL_HOST

AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_11([noext])
AC_PROG_INSTALL
dnl }}}

dnl {{{ library checks
dnl }}}

dnl {{{ output
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
dnl }}}

